project with css slider

--- a/sass/partials/_section.scss
+++ b/sass/partials/_section.scss
@@ -94,54 +94,13 @@ section {
     width: 70vw;
     height: 40vw;
     margin: 0px 10px;
+    text-indent:-9999px;
 }
 #image-map-container {
     display: flex;
     justify-content: center;
 }
 
-/* Slider css */
-
-/*
-#slider {
-    input[name='slide_switch'] {
-        display: none;
-            img {
-                opacity: 0;
-                transform: scale(1.1);
-            }
-    }
-    label {
-        margin: 18px 18px 0 0;
-	    border: 3px solid #999;
-        //float: left;
-        cursor: pointer;
-        opacity: 0.6;
-            :checked {
-                border-color: #666;
-                opacity: 1;
-           }
-    }
-}
-
-.image-small {
-    width: 10vw;
-    height: 6vw;
-    //position: absolute;
-    display: block;
-}
-
-.image-big {
-    width: 52vw;
-    height: 30vw;
-    position: absolute;
-}
-*/
-
-/* TURN OFF CSS SLIDER */
-#slider {
-    visibility: hidden;
-}
 
 .slide-image-1 {
     background-image: url('../image/gallery/Amanreet Bajwa.png');
@@ -221,6 +180,7 @@ section {
 #text-map-description {
     font-size: 10px;
 }
+
 
 
 // -- FOOTER --
