--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,8 +2,7 @@
 @import 'modules/grid12';
 @import 'modules/font';
 @import 'partials/section';
-@import 'effects/slider';
 @import 'media/small';
 @import 'media/medium';
+//@import 'media/xlarge';
 @import 'media/large';
-@import 'media/xlarge';
