--- a/sass/modules/_font.scss
+++ b/sass/modules/_font.scss
@@ -1,55 +1,45 @@
 @font-face {
 
 }
+// -- HOME
 
-#data {
-    font-family: arial;
-    font-size: 10px;
+
+// -- ABOUT
+
+#about {
+    #about-text {
+        color: white;
+
+        #about-head {
+            //font-size: 2em;
+        }
+        #about-paragaph {
+            //font-size: 2em; // small
+        }
+    }
+
 }
 
-.button {
-    a {
-        font-family: arial;
+// -- PRODUCTS
+#products-1 {
+    #common-rail {
+        #common-rail-head {
+            //font-size: 2em;
+        }
+        #common-rail-paragraph {
+            //font-size: 2em;
+        }
+        #common-rail-dedicated {
+            //font-size: 2em;
+        }
     }
 }
 
-#text-possible {
-    font-weight: bold;
-    font-size: 24px;
-    font-family: verdana;
-}
 
-.text-company {
-    font-family: arial;
-}
+// -- CONTACT
 
-#text-team {
-    font-weight: bold;
-    font-family: verdana;
-}
-
-#slide-name {
-    font-weight: bold;
-    font-family: verdana;
-}
-
-#slide-information {
-    font-family: verdana;
-}
-
-#text-map {
-    font-weight: bold;
-    font-family: verdana;
-    color: blue;
-}
-
-#text-map-description {
-    font-family: verdana;
-    color: blue;
-}
-
-.footer {
-    span {
-        font-family: tahoma;
+#contact {
+    #contact-text {
+        color: white;
     }
 }
