--- a/sass/media/_small.scss
+++ b/sass/media/_small.scss
@@ -28,7 +28,30 @@ $small: "(max-width: 610px)";
         }
     }
     .nav-panel {
-        visibility: hidden;
+        width: 100%;
+        height: 20%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        .nav-list {
+            display: none;
+            position: relative;
+            //display: flex;
+            flex-direction: column;
+            &.is-active {
+                display: flex;
+                position: absolute;
+                width: 400px;
+                height: 400px;
+                background-color: black;
+                .line {
+                    display: none;
+                }
+                a {
+                    //width: 100%;
+                }
+            }
+        }
     }
 // -- ABOUT
 
