--- a/sass/partials/_section.scss
+++ b/sass/partials/_section.scss
@@ -1,7 +1,7 @@
 // -- HOME
 
 #home-background {
-    background-image: url('../images/tlo-head.png');
+    background-image: url('../images/tło-head-v2_01.png');
     background-size: cover;
     background-repeat: no-repeat;
     content: " ";
@@ -34,15 +34,14 @@
         background-image: url('../images/common-rail.png');
         background-size: cover;
         background-repeat: no-repeat;
-
+        opacity: 0.8;
     }
-
-
 
     #products-injector {
         background-image: url('../images/injector-2.png');
         background-size: cover;
         background-repeat: no-repeat;
+        opacity: 0.8;
     }
 }
 
@@ -77,11 +76,9 @@
             content: " ";
         }
     }
-
 }
 
 /* -- NAV -- */
-
 
 
 .line {
@@ -100,11 +97,51 @@ a {
     color: white;
 }
 
+.hamburger-menu {
+    width: 30px;
+    height: 30px;
+
+    //text-decoration: none;
+    //text-align: center;
+    //background: red;
+    //border: 0px;
+    //position: relative;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+
+        .line {
+            width: 100%;
+            height: 2px;
+            content: " ";
+            background-color: white;
+            //position: absolute;
+            //border-top: 2px solid white;
+            //padding: 2px;
+        }
+    }
+
+
 /* -- LANG -- */
 
 .lang {
     display: flex;
     justify-content: flex-start;;
-    align-items: flex-start;
+    align-items: center;
+    height: 100px;
+    width: 150px;
 
+    button {
+        width: 24px;
+        height: 22px;
+        border: 1px solid white;
+        margin: 2px;
+        text-align: left;
+        text-decoration: none;
+        background: transparent;
+        color: white;
+
+    }
 }
