--- a/sass/modules/_grid12.scss
+++ b/sass/modules/_grid12.scss
@@ -4,7 +4,7 @@
 
 .grid {
   width : 100%;
-  //max-width : 1200px;
+  height: 100vh;
 }
 
 
@@ -16,11 +16,7 @@
 
 [class*='col-'] {
   float: left;
-  //min-height: 1px;
   width: 8.33%;
-  //padding: 2px;
-  //background-color: #FFDCDC;
-  //border: 1px solid lightgreen;
   height: 100%;
 }
 
