--- a/sass/media/_large.scss
+++ b/sass/media/_large.scss
@@ -2,227 +2,417 @@ $large: "(min-width: 1024px)";
 
 @media #{$large} {
     body {
-        background: black;
+        background: white;
     }
 
-    // -- HOME
+/* ---- HOME ---- */
 
-    #home-background {
-        height: 900px;
+#home-background {
+    height: 100vh;
+    border-top: 8px solid orange;
+
+    .nav-panel {
         width: 100%;
-        border-top: 7px solid orange;
+        height: 25%;
+        //background-color: blue;
+
+        .hamburger-menu {
+            display: none;
+        }
     }
-        #home {
+
+    #home {
+        width: 100%;
+        height: 50%;
+        //background-color: red;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        #home-logo {
+            width: 25%;
+            height: 25%;
+        }
+    }
+
+    .arrow-container {
+        width: 100%;
+        height: 25%;
+        //background-color: lightblue;
+
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-end;
+
+        .arrow {
+            width: 2%;
+            height: 20%;
+            //background-color: green;
+            content: " ";
+        }
+    }
+}
+
+/* ---- ABOUT ---- */
+
+#about-background {
+    height: 100vh;
+    border-top: 8px solid orange;
+
+    .nav-panel {
+        width: 100%;
+        height: 25%;
+        //background-color: blue;
+
+        .hamburger-menu {
+            display: none;
+        }
+    }
+
+    #about {
+        width: 100%;
+        height: 50%;
+        //background-color: red;
+
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+
+        #about-text {
+            width: 46%;
+            height: 50%;
+
+            padding-left: 200px;
+        }
+    }
+
+    .arrow-container {
+        width: 100%;
+        height: 25%;
+        //background-color: lightblue;
+
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-end;
+
+        .arrow {
+            width: 2%;
+            height: 20%;
+            //background-color: green;
+            content: " ";
+        }
+    }
+
+}
+
+/* ---- PRODUCTS ---- */
+
+
+#products-1 {
+    height: 100vh;
+
+    display: flex;
+
+    padding: 35px 0 35px 35px;
+
+    #products-common-rail {
+        height: 100%;
+        width: 49%;
+
+        //background-color: red;
+
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+
+        #common-rail {
+            width: 90%;
+            height: 50%;
+            padding-left: 170px;
+        }
+
+    }
+
+    #products-injector {
+        height: 100%;
+        width: 49%;
+
+        border-right: 8px solid orange;
+        //background-color: blue;
+
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+
+        #injector {
+            width: 90%;
+            height: 50%;
+            padding-right: 170px;
+        }
+    }
+
+    .products-other-container {
+        height: 100%;
+        width: 2%;
+
+        //background-color: green;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+
+        .products-other-text {
+            //background-color: orange;
+
+            width: 100%;
+            height: 20%;
+
             display: flex;
             justify-content: center;
             align-items: center;
-            //background-size: contain;
-            width: 100%;
-            height: 50%;
-            //background-color: blue;
-            //opacity: 0.3;
 
-            #home-logo {
-                width: 18vw;
-                height: 20%;
+            p {
+            transform: rotate(-90deg);
             }
         }
 
-     .nav-panel {
+        .arrow-black-container {
+            //background-color: orange;
+
+            width: 100%;
+            height: 5%;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            .arrow-black {
+                transform: rotate(-90deg);
+                width: 100%;
+                height: 20%;
+                content: " ";
+            }
+        }
+    }
+
+}
+
+#products-2 {
+    height: 100vh;
+
+    display: flex;
+
+    padding: 35px 0 35px 35px;
+
+
+    #products-second-page {
+        width: 98%;
+        height: 100%;
+
+        //background-color: purple;
+
+        display: flex;
+
+        #background-denso {
+            width: 20%;
+            height: 100%;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            #products-denso {
+                width: 90%;
+                height: 10%;
+            }
+        }
+
+        #background-bosch {
+            width: 20%;
+            height: 100%;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            #products-bosch {
+                width: 90%;
+                height: 10%;
+            }
+        }
+
+        #background-continental {
+            width: 20%;
+            height: 100%;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            #products-continental {
+                width: 90%;
+                height: 10%;
+            }
+        }
+
+        #background-delphi {
+            width: 20%;
+            height: 100%;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            #products-delphi {
+                width: 90%;
+                height: 10%;
+            }
+        }
+
+        #background-siemens {
+            width: 20%;
+            height: 100%;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            #products-siemens {
+                width: 90%;
+                height: 10%;
+            }
+        }
+    }
+
+    .products-other-container {
+        height: 100%;
+        width: 2%;
+
+        //background-color: green;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+
+        .products-other-text {
+            //background-color: orange;
+
             width: 100%;
             height: 20%;
-            //background-color: green;
-            //opacity: 0.3;
+
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
-            padding-left: 20vw;
-            padding-right: 20vw;
-            .lang {
-                align-items: flex-start;
+
+            p {
+            transform: rotate(-90deg);
             }
         }
 
+        .arrow-black-container {
+            //background-color: orange;
 
-
-    .nav-list {
-        height: 100px;
-        width: 300px;
-        //background-color: blue;
-        color: white;
-        a {
-            padding: 2px;
-            .line {
-                margin-left: 10px;
-            }
-            &:hover {
-                .line {
-                    width: 50%;
-                    background-color: orange;
-                }
-                color: orange;
-
-            }
-        }
-    }
-
-    .hamburger-menu {
-        display: none;
-    }
-
-    // -- ABOUT
-
-        #about {
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
-
-            height: 900px;
             width: 100%;
-            padding: 18vw;
+            height: 5%;
 
-            #about-text {
-                height: 50%;
-                width: 45%;
-                //background-color: red;
-                padding: 2vw;
-            }
-            border-top: 7px solid orange;
-        }
-
-    // -- PRODUCTS
-
-        #products-1 {
             display: flex;
-            //justify-content: center;;
-            //align-items: center;
+            justify-content: center;
+            align-items: flex-end;
 
-            padding: 2vw;
-            background: white;
-
-            height: 900px;
-            width: 100%;
-
-            #products-common-rail {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-
-                height: 100%;
-                width: 50%;
-
-                #common-rail {
-                    //background-color: red;
-                    width: 100%;
-                    //height: 50%;
-                    padding-left: 18vw;
-                    padding-right: 2vw;
-
-                    #common-rail-head {
-                    }
-
-                    #common-rail-paragraph {
-
-                    }
-                    #common-rail-dedicated {
-
-                    }
-                    #common-rail-vw {
-
-                    }
-                    #common-rail-renault {
-
-                    }
-                }
-
-            }
-
-            #products-injector {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-
-                height: 100%;
-                width: 50%;
-
-                border-right: 7px solid orange;
-
-
-                #injector {
-                    //background-color: red;
-                    width: 100%;
-                    //height: 50%;
-                    padding-right: 18vw;
-                    padding-left: 2vw;
-
-                    #injector-head {
-
-                    }
-                    #injector-paragraph {
-
-                    }
-                    #injector-dedicated {
-
-                    }
-                }
-
-            }
-        }
-
-    // -- CONTACT
-
-    #contact {
-        height: 900px;
-        width: 100%;
-
-        border-top: 7px solid orange;
-
-        #contact-1 {
-            width: 70%;
-            height: 88%;
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
-
-            padding: 0 18vw;
-            #contact-text{
-                padding: 2vw;
-            }
-        }
-        #contact-2 {
-
-        }
-        #footer {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-
-            height: 12%;
-            width: 100%;
-
-            padding: 0 20vw;
-
-            #contact-line {
-                border-top: 1px solid gray;
+            .arrow-black {
+                transform: rotate(90deg);
                 width: 100%;
-                display: flex;
-                justify-content: space-between;
-                //padding: 2vw;
-
+                height: 20%;
+                content: " ";
             }
+        }
+    }
+
+}
+
+/* ---- CONTACT ---- */
+
+#contact-background {
+    height: 100vh;
+    border-top: 8px solid orange;
+
+    .nav-panel {
+        width: 100%;
+        height: 25%;
+        //background-color: blue;
+
+        .hamburger-menu {
+            display: none;
+        }
+    }
+
+    #contact-1 {
+        width: 100%;
+        height: 50%;
+        //background-color: red;
+
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+
+        #contact-text {
+            width: 46%;
+            height: 50%;
+
+            padding-left: 200px;
+
+            #contact-detail {
+                padding-top: 25px;
+            }
+            #contact-telephone {
+                padding-top: 15px;
+            }
+        }
+    }
+
+    #footer {
+        width: 100%;
+        height: 25%;
+
+        display: flex;
+        justify-content: flex-end;
+        flex-direction: column;
+
+        padding: 0 200px;
+
+        #contact-line {
+            border-top: 1px solid gray;
+            width: 100%;
+            height: 10%;
+        }
+
+        #contact-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-end;
+
+            width: 100%;
+            height: 40%;
 
             #contact-logo {
+                height: 100%;
                 width: 20%;
-                height: 3vw;
-                margin: 2vw 0;
             }
+
             #studio-18 {
-                width: 5%;
-                height: 2vw;
-                margin: 2vw 0;
+                height: 80%;
+                width: 10%;
             }
         }
     }
+}
+
+
+
+
+
+
+
+
+
 
 
 }
