--- a/sass/media/_medium.scss
+++ b/sass/media/_medium.scss
@@ -1,218 +1,374 @@
-$medium: "(min-width: 611px) and (max-width: 1023px)";
+$medium: "(min-width: 768px) and (max-width: 1023px)";
 
 @media #{$medium} {
     body {
-        background: black;
+        background: white;
     }
 
-    // -- HOME
+/* ---- HOME ---- */
 
-    #home-background {
-        height: 600px;
+#home-background {
+    height: 100vh;
+    border-top: 8px solid orange;
+
+    .nav-panel {
         width: 100%;
+        height: 25%;
 
-        border-top: 7px solid orange;
+        .nav-list {
+            display: none;
+        }
     }
 
-        #home {
+    #home {
+        width: 100%;
+        height: 50%;
+        //background-color: red;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        #home-logo {
+            width: 30%;
+            height: 30%;
+        }
+    }
+
+}
+
+/* ---- ABOUT ---- */
+
+#about-background {
+    height: 100vh;
+    border-top: 8px solid orange;
+
+    .nav-panel {
+        width: 100%;
+        height: 25%;
+
+        .nav-list {
+            display: none;
+        }
+    }
+
+    #about {
+        width: 100%;
+        height: 50%;
+        //background-color: red;
+
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+
+        #about-text {
+            max-width: 50%;
+            height: 50%;
+
+            padding-left: 100px;
+        }
+    }
+
+}
+
+/* ---- PRODUCTS ---- */
+
+#products-1 {
+    height: 100vh;
+
+    display: flex;
+
+    padding: 15px 0 15px 15px;
+
+    #products-common-rail {
+        height: 100%;
+        width: 49%;
+
+        //background-color: red;
+
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+
+        #common-rail {
+            width: 90%;
+            height: 50%;
+            padding-left: 85px;
+        }
+
+    }
+
+    #products-injector {
+        height: 100%;
+        width: 49%;
+
+        border-right: 8px solid orange;
+        //background-color: blue;
+
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+
+        #injector {
+            width: 90%;
+            height: 50%;
+            padding-right: 85px;
+        }
+    }
+
+    .products-other-container {
+        height: 100%;
+        width: 2%;
+
+        //background-color: green;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+
+        .products-other-text {
+            //background-color: orange;
+
+            width: 100%;
+            height: 20%;
+
             display: flex;
             justify-content: center;
             align-items: center;
-            //background-size: contain;
-            height: 50%;
-            width: 100%;
 
-            #home-logo {
-                width: 30vw;
-                height: 20%;
+            p {
+            transform: rotate(-90deg);
             }
         }
-        .nav-panel {
-            //visibility: hidden;
+
+        .arrow-black-container {
+            //background-color: orange;
+
             width: 100%;
-            height: 20%;
+            height: 5%;
+
             display: flex;
-            justify-content: space-around;
-            align-items: center;
-            .nav-list {
-                visibility: hidden;
-            }
-            .hamburger-menu {
-
-                button {
-                    width: 100%;
-                    height: 100%;
-                    text-decoration: none;
-                    background-color: transparent;
-
-                    display: flex;
-                    justify-content: space-around;
-                    align-items: center;
-                    flex-direction: column;
-                }
-                .line {
-                    width: 100%;
-                    height: 2px;
-                    content: " ";
-                    background-color: white;
-                }
-            }
-
-        }
-
-
-
-
-    // -- ABOUT
-
-        #about {
-            display: flex;
-            justify-content: flex-start;
+            justify-content: center;
             align-items: center;
 
-            height: 600px;
-            width: 100%;
-            padding: 5vw;
-
-            #about-text {
-                height: 50%;
-                width: 50%;
-                //background-color: red;
-                padding: 2vw;
-            }
-            border-top: 1vw solid orange;
-        }
-
-    // -- PRODUCTS
-
-        #products-1 {
-            display: flex;
-            //justify-content: center;;
-            //align-items: center;
-
-            padding: 2vw;
-            background: white;
-
-            height: 600px;
-            width: 100%;
-
-            #products-common-rail {
-                display: flex;
-                justify-content: flex-end;
-                align-items: center;
-
-                height: 100%;
-                width: 50%;
-
-                #common-rail {
-                    //background-color: red;
-                    width: 80%;
-                    height: 50%;
-                    padding: 2vw;
-
-                    #common-rail-head {
-                    }
-
-                    #common-rail-paragraph {
-
-                    }
-                    #common-rail-dedicated {
-
-                    }
-                    #common-rail-vw {
-
-                    }
-                    #common-rail-renault {
-
-                    }
-                }
-
-            }
-
-            #products-injector {
-                display: flex;
-                justify-content: flex-start;
-                align-items: center;
-
-                height: 100%;
-                width: 50%;
-
-                border-right: 1vw solid orange;
-
-
-                #injector {
-                    //background-color: red;
-                    width: 80%;
-                    height: 50%;
-                    padding: 2vw;
-
-                    #injector-head {
-
-                    }
-                    #injector-paragraph {
-
-                    }
-                    #injector-dedicated {
-
-                    }
-                }
-
-            }
-        }
-
-    // -- CONTACT
-
-    #contact {
-        height: 600px;
-        width: 100%;
-
-        border-top: 1vw solid orange;
-
-        #contact-1 {
-            width: 100%;
-            height: 80%;
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
-
-            padding: 0 5vw;
-            #contact-text{
-                padding: 2vw;
-            }
-        }
-        #contact-2 {
-
-        }
-        #footer {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-
-            height: 20%;
-            width: 100%;
-
-            padding: 0 7vw;
-
-            #contact-line {
-                border-top: 1px solid gray;
+            .arrow-black {
+                transform: rotate(-90deg);
                 width: 100%;
-                display: flex;
-                justify-content: space-between;
-                //padding: 2vw;
-
-            }
-
-            #contact-logo {
-                width: 20%;
-                height: 6vw;
-                margin: 2vw 0;
-            }
-            #studio-18 {
-                width: 5%;
-                height: 2vw;
-                margin: 3vw 0;
+                height: 20%;
+                content: " ";
             }
         }
     }
+
+}
+
+#products-2 {
+    height: 100vh;
+
+    display: flex;
+
+    padding: 15px 0 15px 15px;
+
+
+    #products-second-page {
+        width: 98%;
+        height: 100%;
+
+        //background-color: purple;
+
+        display: flex;
+
+        #background-denso {
+            width: 20%;
+            height: 100%;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            #products-denso {
+                width: 90%;
+                height: 10%;
+            }
+        }
+
+        #background-bosch {
+            width: 20%;
+            height: 100%;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            #products-bosch {
+                width: 90%;
+                height: 10%;
+            }
+        }
+
+        #background-continental {
+            width: 20%;
+            height: 100%;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            #products-continental {
+                width: 90%;
+                height: 10%;
+            }
+        }
+
+        #background-delphi {
+            width: 20%;
+            height: 100%;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            #products-delphi {
+                width: 90%;
+                height: 10%;
+            }
+        }
+
+        #background-siemens {
+            width: 20%;
+            height: 100%;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            #products-siemens {
+                width: 90%;
+                height: 10%;
+            }
+        }
+    }
+
+    .products-other-container {
+        height: 100%;
+        width: 2%;
+
+        //background-color: green;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+
+        .products-other-text {
+            //background-color: orange;
+
+            width: 100%;
+            height: 20%;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            p {
+            transform: rotate(-90deg);
+            }
+        }
+
+        .arrow-black-container {
+            //background-color: orange;
+
+            width: 100%;
+            height: 5%;
+
+            display: flex;
+            justify-content: center;
+            align-items: flex-end;
+
+            .arrow-black {
+                transform: rotate(90deg);
+                width: 100%;
+                height: 20%;
+                content: " ";
+            }
+        }
+    }
+
+}
+
+/* ---- CONTACT ---- */
+
+#contact-background {
+    height: 100vh;
+    border-top: 8px solid orange;
+
+    .nav-panel {
+        width: 100%;
+        height: 25%;
+        //background-color: blue;
+
+        .nav-list {
+            display: none;
+        }
+    }
+
+    #contact-1 {
+        width: 100%;
+        height: 50%;
+        //background-color: red;
+
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+
+        #contact-text {
+            max-width: 50%;
+            height: 50%;
+
+            padding-left: 100px;
+
+            #contact-detail {
+                padding-top: 25px;
+            }
+            #contact-telephone {
+                padding-top: 15px;
+            }
+        }
+    }
+
+    #footer {
+        width: 100%;
+        height: 25%;
+
+        display: flex;
+        justify-content: flex-end;
+        flex-direction: column;
+
+        padding: 0 100px;
+
+        #contact-line {
+            border-top: 1px solid gray;
+            width: 100%;
+            height: 10%;
+        }
+
+        #contact-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-end;
+
+            width: 100%;
+            height: 40%;
+
+            #contact-logo {
+                height: 100%;
+                width: 20%;
+            }
+
+            #studio-18 {
+                height: 80%;
+                width: 10%;
+            }
+        }
+
+    }
+}
+
 
 }
