--- a/sass/media/_small.scss
+++ b/sass/media/_small.scss
@@ -1,197 +1,291 @@
-$small: "(max-width: 610px)";
+$small: "(max-width: 768px)";
 
 @media #{$small} {
     body {
-        background: black;
+        background: white;
     }
 
-// -- HOME
+    /* ---- HOME ---- */
 
-#home-background {
-    height: 600px;
-    width: 100%;
-    border-top: 2vw solid orange;
-}
+    #home-background {
+        height: 100vh;
+        border-top: 8px solid orange;
 
+        .nav-panel {
+            width: 100%;
+            height: 25%;
 
-    #home {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        height: 50%;
-        width: 100%;
-
-        #home-logo {
-            width: 80%;
-            height: 50%;
-        }
-    }
-    .nav-panel {
-        width: 100%;
-        height: 20%;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        .nav-list {
-            display: none;
-            position: relative;
-            //display: flex;
-            flex-direction: column;
-            &.is-active {
-                display: flex;
-                position: absolute;
-                width: 400px;
-                height: 400px;
-                background-color: black;
-                .line {
-                    display: none;
-                }
-                a {
-                    //width: 100%;
-                }
+            .nav-list {
+                display: none;
             }
         }
-    }
-// -- ABOUT
 
-    #about {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        height: 100vw;
-        width: 100%;
-
-        #about-text {
-            height: 80vw;
-            width: 80%;
+        #home {
+            width: 100%;
+            height: 50%;
             //background-color: red;
-        }
-        border-top: 2vw solid orange;
-    }
 
-// -- PRODUCTS
-
-    #products-1 {
-        display: block;
-        //justify-content: center;;
-        //align-items: center;
-        padding: 2vw;
-        background: white;
-
-        height: 200vw;
-        width: 100%;
-
-        #products-common-rail {
             display: flex;
             justify-content: center;
             align-items: center;
 
+            #home-logo {
+                width: 80%;
+                height: 50%;
+            }
+        }
+
+    }
+
+    /* ---- ABOUT ---- */
+
+    #about-background {
+        height: 100vh;
+        border-top: 8px solid orange;
+
+        .nav-panel {
+            width: 100%;
+            height: 25%;
+
+            .nav-list {
+                display: none;
+            }
+        }
+
+        #about {
+            width: 100%;
             height: 50%;
+            //background-color: red;
+
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+
+            #about-text {
+                max-width: 90%;
+                height: 50%;
+
+                padding-left: 30px;
+            }
+        }
+
+    }
+
+    /* ---- PRODUCTS ---- */
+
+    #products-1 {
+        height: 200vh;
+        width: 100%;
+
+        display: flex;
+        flex-direction: column;
+
+        padding: 10px;
+
+        #products-common-rail {
+            height: 100%;
             width: 100%;
 
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
             #common-rail {
-                //background-color: red;
-                width: 85%;
-                height: 80vw;
-
-                #common-rail-head {
-                }
-
-                #common-rail-paragraph {
-
-
-                }
-                #common-rail-dedicated {
-
-                }
-                #common-rail-vw {
-
-                }
-                #common-rail-renault {
-
-                }
+                width: 90%;
+                height: 50%;
+                padding-left: 10px;
             }
 
         }
 
         #products-injector {
+            height: 100%;
+            width: 100%;
+
             display: flex;
             justify-content: center;
             align-items: center;
 
-            height: 50%;
-            width: 100%;
-
             #injector {
-                //background-color: red;
-                width: 85%;
-                height: 80vw;
+                width: 90%;
+                height: 50%;
+                padding-right: 10px;
+            }
+        }
 
-                #injector-head {
+    }
 
+    .products-other-container {
+        display: none;
+    }
+
+
+    #products-2 {
+        height: 100vh;
+        width: 100%;
+
+        display: flex;
+
+        padding: 10px;
+
+        #products-second-page {
+            width: 100%;
+            height: 100%;
+
+            //background-color: purple;
+
+            display: flex;
+            flex-direction: column;
+
+            #background-denso {
+                width: 100%;
+                height: 20%;
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                #products-denso {
+                    width: 65%;
+                    height: 50%;
                 }
-                #injector-paragraph {
+            }
 
+            #background-bosch {
+                width: 100%;
+                height: 20%;
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                #products-bosch {
+                    width: 80%;
+                    height: 60%;
                 }
-                #injector-dedicated {
+            }
 
+            #background-continental {
+                width: 100%;
+                height: 20%;
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                #products-continental {
+                    width: 80%;
+                    height: 54%;
+                }
+            }
+
+            #background-delphi {
+                width: 100%;
+                height: 20%;
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                #products-delphi {
+                    width: 64%;
+                    height: 80%;
+                }
+            }
+
+            #background-siemens {
+                width: 100%;
+                height: 20%;
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                #products-siemens {
+                    width: 70%;
+                    height: 50%;
+                }
+            }
+        }
+
+        .products-other-container {
+            display: none;
+        }
+
+    }
+
+    /* ---- CONTACT ---- */
+
+    #contact-background {
+        height: 100vh;
+        border-top: 8px solid orange;
+
+        .nav-panel {
+            width: 100%;
+            height: 25%;
+            //background-color: blue;
+
+            .nav-list {
+                display: none;
+            }
+        }
+
+        #contact-1 {
+            width: 100%;
+            height: 50%;
+            //background-color: red;
+
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+
+            #contact-text {
+                max-width: 90%;
+                height: 50%;
+
+                padding-left: 30px;
+
+                #contact-detail {
+                    padding-top: 25px;
+                }
+                #contact-telephone {
+                    padding-top: 15px;
+                }
+            }
+        }
+
+        #footer {
+            width: 100%;
+            height: 25%;
+
+            display: flex;
+            justify-content: flex-end;
+            flex-direction: column;
+
+            padding: 0 10px;
+
+            #contact-line {
+                border-top: 1px solid gray;
+                width: 100%;
+                height: 5%;
+            }
+
+            #contact-container {
+                display: flex;
+                justify-content: space-between;
+                align-items: flex-end;
+
+                width: 100%;
+                height: 20%;
+
+                #contact-logo {
+                    height: 100%;
+                    width: 20%;
+                }
+
+                #studio-18 {
+                    height: 80%;
+                    width: 10%;
                 }
             }
 
         }
     }
 
-// -- CONTACT
-
-#contact {
-    height: 100vw;
-    width: 100%;
-
-    border-top: 2vw solid orange;
-
-    #contact-1 {
-        width: 100%;
-        height: 78vw;
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-
-        padding: 10vw;
 
     }
-    #contact-2 {
-
-    }
-    #footer {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-
-        height: 20vw;
-        width: 100%;
-
-        padding: 10vw;
-
-        #contact-line {
-            border-top: 1vw solid gray;
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-        }
-
-        #contact-logo {
-            width: 40%;
-            height: 18vw;
-            margin: 2vw;
-        }
-        #studio-18 {
-            width: 20%;
-            height: 18vw;
-            margin: 4vw;
-        }
-    }
-}
-
-}
