--- a/sass/partials/_section.scss
+++ b/sass/partials/_section.scss
@@ -14,45 +14,131 @@
     content: " ";
 }
 
+.arrow {
+    background-image: url('../images/arrow.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    content: " ";
+}
+
+.arrow-red {
+    background-image: url('../images/arrow-red.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    content: " ";
+}
 
 // -- ABOUT
 
-#about {
-    background-image: url('../images/tlo-about.png');
+#about-background {
+    background-image: url('../images/tlo-about-v2.png');
     background-size: cover;
     background-repeat: no-repeat;
     content: " ";
 
 }
 
+
 // -- PRODUCTS
+
 
 #products-1 {
 
     #products-common-rail {
-
-        background-image: url('../images/common-rail.png');
+        background-image: url('../images/wtryski-orange-v.png');
         background-size: cover;
         background-repeat: no-repeat;
-        opacity: 0.8;
+        content: " ";
     }
 
     #products-injector {
-        background-image: url('../images/injector-2.png');
+        background-image: url('../images/wtryski-black-v.png');
         background-size: cover;
         background-repeat: no-repeat;
-        opacity: 0.8;
+        content: " ";
     }
 }
 
-#products-2 {
-    visibility: hidden;
+
+.arrow-black {
+    background-image: url('../images/arrow-black.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    content: " ";
 }
+
+
+#products-2 {
+    //visibility: hidden;
+
+    #background-denso {
+        background-image: url('../images/wtryski-1v.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        content: " ";
+    }
+    #background-bosch {
+        background-image: url('../images/wtryski-2v.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        content: " ";
+    }
+    #background-continental {
+        background-image: url('../images/wtryski-3v.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        content: " ";
+    }
+    #background-delphi {
+        background-image: url('../images/wtryski-4v.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        content: " ";
+    }
+    #background-siemens {
+        background-image: url('../images/wtryski-5v.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        content: " ";
+    }
+
+    #products-denso {
+        background-image: url('../images/denso.png');
+        background-size: contain;
+        background-repeat: no-repeat;
+        content: " ";
+    }
+    #products-bosch {
+        background-image: url('../images/bosh.png');
+        background-size: contain;
+        background-repeat: no-repeat;
+        content: " ";
+    }
+    #products-continental {
+        background-image: url('../images/continental.png');
+        background-size: contain;
+        background-repeat: no-repeat;
+        content: " ";
+    }
+    #products-delphi {
+        background-image: url('../images/delphi.png');
+        background-size: contain;
+        background-repeat: no-repeat;
+        content: " ";
+    }
+    #products-siemens {
+        background-image: url('../images/siemens.png');
+        background-size: contain;
+        background-repeat: no-repeat;
+        content: " ";
+    }
+}
+
 
 // -- CONTACT
 
-#contact {
-    background-image: url('../images/tlo-contact.png');
+#contact-background {
+    background-image: url('../images/tlo-contact-v2.png');
     background-size: cover;
     background-repeat: no-repeat;
 
@@ -60,7 +146,7 @@
 
     }
     #contact-2 {
-        visibility: hidden;
+        //visibility: hidden;
     }
     #footer {
         #contact-logo {
@@ -75,73 +161,5 @@
             background-repeat: no-repeat;
             content: " ";
         }
-    }
-}
-
-/* -- NAV -- */
-
-
-.line {
-    width: 20%;
-    height: 2px;
-    content: " ";
-    background-color: white;
-    //display: inline-block;
-}
-
-a {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    text-decoration: none;
-    color: white;
-}
-
-.hamburger-menu {
-    width: 30px;
-    height: 30px;
-
-    //text-decoration: none;
-    //text-align: center;
-    //background: red;
-    //border: 0px;
-    //position: relative;
-
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
-
-        .line {
-            width: 100%;
-            height: 2px;
-            content: " ";
-            background-color: white;
-            //position: absolute;
-            //border-top: 2px solid white;
-            //padding: 2px;
-        }
-    }
-
-
-/* -- LANG -- */
-
-.lang {
-    display: flex;
-    justify-content: flex-start;;
-    align-items: center;
-    height: 100px;
-    width: 150px;
-
-    button {
-        width: 24px;
-        height: 22px;
-        border: 1px solid white;
-        margin: 2px;
-        text-align: left;
-        text-decoration: none;
-        background: transparent;
-        color: white;
-
     }
 }
