--- a/css/main.css
+++ b/css/main.css
@@ -557,7 +557,13 @@ body {
           width: 20%; }
         #contact-background #footer #contact-container #studio-18 {
           height: 80%;
-          width: 10%; } }
+          width: 10%;
+          cursor: pointer;
+          position: relative; }
+          #contact-background #footer #contact-container #studio-18 a {
+            position: absolute;
+            width: 100%;
+            height: 100%; } }
 
 @media (min-width: 768px) and (max-width: 1023px) {
   body {
@@ -931,7 +937,13 @@ body {
           width: 20%; }
         #contact-background #footer #contact-container #studio-18 {
           height: 80%;
-          width: 10%; } }
+          width: 10%;
+          cursor: pointer;
+          position: relative; }
+          #contact-background #footer #contact-container #studio-18 a {
+            position: absolute;
+            width: 100%;
+            height: 100%; } }
 
 @media (min-width: 1024px) {
   body {
@@ -1309,7 +1321,14 @@ body {
           width: 20%; }
         #contact-background #footer #contact-container #studio-18 {
           height: 80%;
-          width: 10%; } }
+          width: 10%;
+          content: ' ';
+          cursor: pointer;
+          position: relative; }
+          #contact-background #footer #contact-container #studio-18 a {
+            position: absolute;
+            width: 100%;
+            height: 100%; } }
 
 /* ---- NAV-PANEL ---- */
 .nav-panel {
