--- a/sass/media/_medium.scss
+++ b/sass/media/_medium.scss
@@ -401,6 +401,13 @@ $medium: "(min-width: 768px) and (max-width: 1023px)";
             #studio-18 {
                 height: 80%;
                 width: 10%;
+                cursor: pointer;
+                position: relative;
+                a{
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                }
             }
         }
 
