--- a/sass/media/_small.scss
+++ b/sass/media/_small.scss
@@ -315,6 +315,13 @@ $small: "(max-width: 768px)";
                 #studio-18 {
                     height: 80%;
                     width: 10%;
+                    cursor: pointer;
+                    position: relative;
+                    a{
+                        position: absolute;
+                        width: 100%;
+                        height: 100%;
+                    }
                 }
             }
 
